GH-172 load SA library from jmod file on JDK 9+